--- a/package.json
+++ b/package.json
@@ -3,4 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT"
+  "scripts": {
+    "start": "node index.js",
+    "prestart": "tsc"
+  }
 }
