--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript_blockchain",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
   "scripts": {
     "start": "node index.js",
     "prestart": "tsc"
