--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node dist/index.js\" "
+    "start": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "devDependencies": {
-    "tsc-watch": "^4.6.0"
+    "@types/node": "^17.0.8",
+    "tsc-watch": "^4.6.0",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "global": "^4.4.0",
+    "ts-node": "^10.4.0"
   }
 }
