--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^17.0.8",
     "tsc-watch": "^4.6.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "global": "^4.4.0",
     "ts-node": "^10.4.0"
   }
